--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,7 +16,8 @@
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
