--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@egjs/react-flicking": "^4.11.2",
     "@vercel/analytics": "^1.1.1",
+    "axios": "^1.6.5",
     "html2canvas": "^1.4.1",
     "next": "13.5.4",
     "next-sitemap": "^4.2.3",
