--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,8 @@ yarn-error.log*
 
 # Environment files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+.env.*.**
 
 # IDE / Editors
 .vscode/
