--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "dev": "PHASE='development' nodemon",
+    "dev:production": "PHASE='production' nodemon",
     "start": "pm2 start ecosystem.config.js --env production",
-    "dev": "nodemon",
     "stop": "pm2 stop ecosystem.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
