--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "dev:production": "PHASE='production' nodemon",
     "start": "pm2 start ecosystem.config.js --env production",
     "stop": "pm2 stop ecosystem.config.js && pm2 kill",
+    "deploy:new": "bash /home/opc/lifeleader/packages/scripts/update_and_restart_server.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
