--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "nodemailer": "^6.9.8",
     "openai": "^4.20.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.3",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "nodemon": "^3.0.2",
