--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@egjs/react-flicking": "^4.11.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.5",
     "html2canvas": "^1.4.1",
