:sparkles: Use redis to keep session even when restarted

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -28,6 +29,7 @@
     "openai": "^4.24.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.12",
     "serialport": "^12.0.0",
     "typescript": "^5.3.2"
   },
