:sparkles: Add graphql dependencies

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
@@ -29,15 +30,21 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "redis": "^4.6.12",
+    "reflect-metadata": "^0.2.1",
     "serialport": "^12.0.0",
+    "type-graphql": "^1.1.1",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/graphql": "^14.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.3",
     "@types/nodemailer": "^6.4.14",
