:sparkles: Apply graphql on user model

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
