--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -24,6 +23,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "^15.3.0",
+    "graphql-yoga": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "nodemailer": "^6.9.8",
