--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,32 +17,37 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "graphql": "^15.3.0",
+    "graphql-yoga": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "nodemailer": "^6.9.8",
     "openai": "^4.24.7",
-    "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "redis": "^4.6.12",
+    "reflect-metadata": "^0.2.1",
     "serialport": "^12.0.0",
+    "type-graphql": "^1.1.1",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.3",
     "@types/nodemailer": "^6.4.14",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1"
   }
