--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "graphql": "15.3.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
     "babel-eslint": "^10.1.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "lerna": "^8.0.0"
