--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,16 @@
 {
   "plugins": ["unused-imports"],
-	"extends":["@typescript-eslint/no-unused-vars"],
+  "extends": ["plugin:@typescript-eslint/recommended"],
   "rules": {
-		"unused-imports/no-unused-imports": "error",
-		"unused-imports/no-unused-vars": [
-			"warn",
-			{ "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
-		]
-	}
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ]
+  }
 }
