--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
+    "@heroicons/react": "^2.1.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.5",
