--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.9.8",
     "openai": "^4.24.7",
     "passport-local": "^1.0.0",
+    "puppeteer": "^21.9.0",
     "reflect-metadata": "^0.2.1",
     "serialport": "^12.0.0",
     "type-graphql": "^1.1.1",
