--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"next dev\" \"yarn gen --watch\"",
-    "build": "next build && next-sitemap",
+    "build": "build:tailwind && next build && next-sitemap",
+    "build:tailwind": "tailwindcss -o public/styles.css",
     "start": "next start",
     "lint": "next lint",
     "gen": "graphql-codegen --config codegen.config.ts"
