:sparkles: Change build command

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"next dev\" \"yarn gen --watch\"",
-    "build": "build:tailwind && next build && next-sitemap",
+    "build": "yarn build:tailwind && next build && next-sitemap",
     "build:tailwind": "tailwindcss -o public/styles.css",
     "start": "next start",
     "lint": "next lint",
