--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"next dev\" \"yarn gen --watch\"",
-    "build": "next build && next-sitemap",
+    "build": "yarn build:tailwind && next build && next-sitemap",
+    "build:tailwind": "tailwindcss -o public/styles.css",
     "start": "next start",
     "lint": "next lint",
     "gen": "graphql-codegen --config codegen.config.ts"
@@ -15,6 +16,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.5",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "next": "13.5.4",
     "next-sitemap": "^4.2.3",
@@ -35,6 +37,7 @@
     "@graphql-codegen/typescript-react-apollo": "^4.1.0",
     "@parcel/watcher": "^2.4.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
